--- a/src/main/resources/com/example/gcalc/CalculusCalc.fxml
+++ b/src/main/resources/com/example/gcalc/CalculusCalc.fxml
@@ -26,13 +26,13 @@
             </rowConstraints>
 
             <Button fx:id="Equals" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" text="=" GridPane.columnIndex="7" GridPane.rowIndex="0" />
-            <Button fx:id="gCalcBtn" onAction="#changeCalc" prefHeight="20" prefWidth="Infinity" text="Graphing" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-            <Button fx:id="PCalcBtn" onAction="#changeCalcP" prefHeight="20" prefWidth="Infinity" text="Physics" GridPane.columnIndex="7" GridPane.rowIndex="2" />
-            <Button fx:id="SCalcBtn" onAction="#changeCalcS" prefHeight="20" prefWidth="Infinity" text="Scientific" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <Button fx:id="gCalcBtn" onAction="#showGraphing" prefHeight="20" prefWidth="Infinity" text="Graphing" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Button fx:id="PCalcBtn" onAction="#showPhysics" prefHeight="20" prefWidth="Infinity" text="Physics" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <Button fx:id="SCalcBtn" onAction="#showScientific" prefHeight="20" prefWidth="Infinity" text="Scientific" GridPane.columnIndex="7" GridPane.rowIndex="3" />
             <Button fx:id="clearType" onAction="#clearType" prefHeight="20" prefWidth="Infinity" text="Clear Type" GridPane.columnIndex="7" GridPane.rowIndex="4" />
             <Button fx:id="clearBtm" onAction="#clear" prefHeight="20" prefWidth="Infinity" text="Clear" GridPane.columnIndex="7" GridPane.rowIndex="5" />
 
-            <TextField fx:id="EquationField" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" GridPane.columnIndex="0" GridPane.columnSpan="7" GridPane.rowIndex="0" />
+            <TextField fx:id="EquationField" onKeyPressed="#loadEquation" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" GridPane.columnIndex="0" GridPane.columnSpan="7" GridPane.rowIndex="0" />
 
             <Button fx:id="cDeriveBtn" onAction="#chainDerive" prefHeight="20" prefWidth="Infinity" text="Chain derive" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Button fx:id="DeriveBtn" onAction="#Derive" prefHeight="20" prefWidth="Infinity" text="Derive" GridPane.columnIndex="0" GridPane.rowIndex="2" />
